Fixing iOS views and overflow on content and texts

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -146,5 +146,5 @@ input {
   color: rgb(60, 158, 73);
   font-family: Tahoma, wcp;
   font-size: 100%;
-  width: 95%;
+  width: 80%;
 }
